# bcdec

./: .gitignore  CMakeLists.txt  README.md  bcdec.h  test.c  test_bcdec.bat
test_images/: dice_bc3.dds  dice_bc4.dds  dice_bc5.dds  dice_bc7.dds  kodim23_bc1.dds  lythwood_room_1k_bc6h_signed.dds  testcard_bc2.dds
